@@ -47,13 +47,20 @@ been ported to ELKS.</P>
 <LI>Kernel and the elkscmd package
 <UL>
 <LI><A HRef="http://www.sf.net/projects/elks">http://www.sf.net/projects/elks</A>
-<LI><A href="ftp://ftp.ecs.soton.ac.uk/pub/elks/">ftp://ftp.ecs.soton.ac.uk/pub/elks/</A>
+<LI><A HRef="ftp://ftp.ecs.soton.ac.uk/pub/elks/">ftp://ftp.ecs.soton.ac.uk/pub/elks/</A>
 </UL>
 <LI>Dev86
 <UL>
 <LI><A HRef="http://www.cix.co.uk/~mayday/">http://www.cix.co.uk/~mayday/</A> (Primary site) 
-<LI><A href="ftp://ftp.ecs.soton.ac.uk/pub/elks/">ftp://ftp.ecs.soton.ac.uk/pub/elks/</A>
+<LI><A HRef="ftp://ftp.ecs.soton.ac.uk/pub/elks/">ftp://ftp.ecs.soton.ac.uk/pub/elks/</A>
 </UL>
+<!--
+<LI>Floppy Images
+<UL>
+<LI><A HRef="http://rainbow.cs.unipi.gr/~harkal/images.zip">Latest floppy images</A>
+<LI><A HRef="http://rainbow.cs.unipi.gr/~harkal/ELKS/">Previous floppy images</A>
+</UL>
+-->
 </UL>
 
 <B>CVS</B>
